提了一大堆东西   什么都不想详细说明的那种

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -55,3 +55,7 @@ fdfs:
     max-total: 100
     max-wait-millis: 60
     jmx-enabled: false
+
+# 自定义配置
+ns:
+  front-path: http://106.12.218.104:8080
