--- a/pom.xml
+++ b/pom.xml
@@ -274,11 +274,19 @@
             <artifactId>UserAgentUtils</artifactId>
             <version>1.2.4</version>
         </dependency>
+        <!--读取配置文件-->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-configuration2</artifactId>
             <version>2.4</version>
         </dependency>
+        <!--读取系统信息-->
+        <dependency>
+            <groupId>com.github.oshi</groupId>
+            <artifactId>oshi-core</artifactId>
+            <version>3.13.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
