--- a/.gitignore
+++ b/.gitignore
@@ -44,5 +44,8 @@
 *.tar.gz
 *.rar
 
+# jrebel #
+rebel.xml
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
